# replicann

./: .gitignore  README.md  pyproject.toml
src/replicann/arch/: transformer.py
src/replicann/nn/: attention.py
